# mini-ml-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mini_ml/: __init__.py
mini_ml/datasets/: __init__.py  loaders.py  synthetic.py
mini_ml/linear_models/: __init__.py
mini_ml/linear_models/classification/: __init__.py  lda.py  least_squares.py  logistic_regression.py  perceptron.py
mini_ml/linear_models/regression/: __init__.py  bayesian_regression.py  ridge.py
mini_ml/model_selection/: __init__.py  kfold.py  split.py
mini_ml/naive_bayes/: __init__.py  bernoulli_nb.py  gaussian_nb.py
mini_ml/nn/: __init__.py  autograd.py  losses.py  optimizers.py
mini_ml/nn/modules/: __init__.py  activations.py  base.py  containers.py  linear.py
mini_ml/preprocessing/: __init__.py  gaussian_basis_features.py  pca.py  polynomial_features.py  scalers.py
notebooks/: capstone_showdown.ipynb
scripts/: graphviz_visualizer.py
tests/: test_autograd.py  test_autograd_extended.py  test_gaussian_nb.py  test_kfold.py  test_logistic_regression.py  test_perceptron.py  test_ridge.py  test_scaler.py
